# pyterrier-alpha

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  style.yml  test-parallel.yaml  test.yml
pyterrier_alpha/: __init__.py  _artifact_legacy.py  artifact.py  colab.py  dataframe_builder.py  diagram.py  documentation.py  fusion.py  inspect.py  io.py  java.py  parallel.py  rbo.py  schematic.py  transform.py  transformer_repr.py  util.py  utils.py  validate.py
pyterrier_alpha/pt_docs/: artifact.rst  dataframe_builder.rst  fusion.rst  index.rst  inspect.rst  io.rst  rbo.rst  schematics.rst  transform.rst  utils.rst  validate.rst
tests/: test_fusion.py  test_transform.py  test_transformer_repr.py
