[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyterrier-alpha"
description = "Alpha channel of features for PyTerrier"
requires-python = ">=3.6"
authors = [
  {name = "Sean MacAvaney", email = "sean.macavaney@glasgow.ac.uk"},
]
maintainers = [
  {name = "Sean MacAvaney", email = "sean.macavaney@glasgow.ac.uk"},
]
readme = "README.md"
classifiers = [
  "Programming Language :: Python",
  "Operating System :: OS Independent",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: Indexing",
  "License :: OSI Approved :: MIT License",
]
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = {attr = "pyterrier_alpha.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
exclude = ["tests"]

[project.urls]
Repository = "https://github.com/seanmacavaney/pyterrier-alpha"
"Bug Tracker" = "https://github.com/seanmacavaney/pyterrier-alpha/issues"

[project.entry-points."pyterrier.artifact.url_protocol_resolver"]
hf = "pyterrier_alpha.artifact:_hf_url_resolver"

[tool.ruff]
line-length = 120
exclude = ["tests"]

[tool.ruff.lint]
select = ["F", "E", "W", "TID", "I", "N", "ANN001", "ANN201", "D"]
ignore = ["D105"]

[tool.ruff.lint.pydocstyle]
convention = "google"
