[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyterrier-alpha"
description = "Alpha channel of features for PyTerrier"
requires-python = ">=3.6"
authors = [
  {name = "Sean MacAvaney", email = "sean.macavaney@glasgow.ac.uk"},
]
maintainers = [
  {name = "Sean MacAvaney", email = "sean.macavaney@glasgow.ac.uk"},
]
readme = "README.md"
classifiers = [
  "Programming Language :: Python",
  "Operating System :: OS Independent",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: Indexing",
  "License :: OSI Approved :: MIT License",
]
dynamic = ["version", "dependencies"]

[project.optional-dependencies]
parallel = [
  'joblib', # used by parallel to fork multiple processes
]

[tool.setuptools.dynamic]
version = {attr = "pyterrier_alpha.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
exclude = ["tests"]

[project.urls]
Repository = "https://github.com/seanmacavaney/pyterrier-alpha"
"Bug Tracker" = "https://github.com/seanmacavaney/pyterrier-alpha/issues"

[tool.ruff]
line-length = 120
exclude = ["tests"]

[tool.ruff.lint]
select = ["F", "E", "W", "TID", "N"]

[tool.ruff.lint.pydocstyle]
convention = "google"
